--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
         <a href="#products">Products</a>
         <a href="#about">About</a>
     </nav>
-    <section id="home">Home</section>
+    <section id="home">
+        <div class="home-header">
+            <h1 class="typing-effect">Guitar-Kinbo</h1>
+        </div>
+        <div class="home-container">
+            <div class="home-text">
+                <h2>Buy Guitars at the Lowest Prices!</h2>
+                <p>Welcome to our Guitar Shop! We offer a wide variety of guitars for all types of musicians, from beginners to experts. 
+                    Buy guitars from us and get the best deals in the market with top-quality instruments at the lowest prices. Whether 
+                    you're looking for acoustic, electric, or bass guitars, we have it all. Don't miss out on our special offers and deals!</p>
+            </div>
+            <div class="home-image">
+                <img src="HomeGuitar.jpg" alt="Guitar Image">
+            </div>
+        </div>
+    </section>
     <section id="about">About</section>
     <section id="products">Shop</section>
     <section id="contact">Contact</section>
