--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <!-- 
+        Author: Mohammed Tashfiq Islam
+        ID: 2221651
+    -->
     <nav>
         <a href="#home">Home</a>
         <a href="#contact">Contact</a>
